Fix colours, layout, and spacing to make things hopefully easier to read

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,7 +61,6 @@
 	body {
 		height: 100%;
 		background-color: #ffffff;
-		/* background-image: url("../../files/bg.jpg"); */
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center center;
@@ -71,7 +70,8 @@
 /* Type */
 
 	body, input, select, textarea {
-		color: #787a7c;
+		color: #333333;
+
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 14pt;
 		font-weight: 300;
@@ -112,7 +112,8 @@
 		}
 
 		a:hover {
-			color: #d6d6d6;
+			color: #bbbbbb;
+
 		}
 
 	strong, b {
@@ -134,13 +135,15 @@
 	}
 
 	.text {
+		font-weight: 300;
 		text-align: left;
 		line-height: 1.5;
 
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #313f47;
+		color: #000000;
+
 		line-height: 1.5;
 		margin: 0 0 0.75em 0;
 	}
@@ -234,7 +237,7 @@ ul.links {
 
 	ul.links li {
 		display: inline-block;
-		padding: 0.675em 2.5em;
+		padding: 3em 2.5em;
 	}
 
 		ul.links li a {
@@ -242,7 +245,6 @@ ul.links {
 			position: relative;
 			display: block;
 			border-radius: 100%;
-			border: solid 0px #c8cccf;
 			line-height: 3.75em;
 			overflow: hidden;
 			text-align: center;
@@ -259,7 +261,6 @@ ul.links {
 		cursor: default;
 		list-style: none;
 		padding-left: 0;
-		/* margin-top: -0.675em; */
 	}
 
 		ul.icons li {
@@ -274,7 +275,6 @@ ul.links {
 				width: 3em;
 				height: 3em;
 				border-radius: 100%;
-				border: solid 0px #c8cccf;
 				line-height: 3.75em;
 				overflow: hidden;
 				text-align: center;
@@ -292,12 +292,11 @@ ul.links {
 				}
 
 				ul.icons li a:before {
-					color: #ffffff;
-					text-shadow: 1px 0px 0px #b4b7ba, -1px 0px 0px #b4b7ba, 0px 1px 0px #b4b7ba, 0px -1px 0px #b4b7ba;
+					color: #555555;
 				}
 
 				ul.icons li a:hover:before {
-					text-shadow: 1.25px 0px 0px #8c8e90, -1.25px 0px 0px #8c8e90, 0px 1.25px 0px #8c8e90, 0px -1.25px 0px #8c8e90;
+					color: #bbbbbb
 				}
 
 				ul.icons li a:before {
@@ -312,9 +311,6 @@ ul.links {
 					text-indent: 0;
 				}
 
-				ul.icons li a:hover {
-					border-color: #ff7496;
-				}
 
 		@media screen and (max-width: 480px) {
 
@@ -339,7 +335,7 @@ ul.links {
 		-webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
 		-ms-transition: opacity 1s ease, -ms-transform 1s ease;
 		transition: opacity 1s ease, transform 1s ease;
-		padding: 4.5em 3em 3em 3em ;
+		padding: 0em 3em 3em 3em ;
 		background: #ffffff;
 		border-radius: 4px;
 		cursor: default;
@@ -390,7 +386,8 @@ ul.links {
 		align-self: flex-end;
 		width: 100%;
 		padding: 1.5em 0 0 0;
-		color: #aaaaaa;
+		color: #333333;
+
 		cursor: default;
 		text-align: center;
 	}
